[package]
name = "intmap-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.15"

[dev-dependencies]
core_affinity = {version = "0.8"}
criterion = { version = "0.4.0", features = ["html_reports"] }
fxhash = "0.2"
rand = "0.8"
arbitrary = { version = "1.2", features = ["derive"] }

[profile.bench]
incremental = false
debug = true
codegen-units = 1
lto = "thin"

[[bench]]
name = "intmap"
harness = false
